--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - 5.4
  
 before_script:
-  - mongo-php-driver-installer.sh
+  - sh mongo-php-driver-installer.sh
   - wget http://getcomposer.org/composer.phar
   - php composer.phar install
   - phpunit
