--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_script:
   - sh mongo-php-driver-installer.sh
   - wget http://getcomposer.org/composer.phar
   - php composer.phar install
-  - phpunit
+  - phpunit --colors test/
