--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,4 +12,8 @@
             <directory suffix=".php">./lib/CodingPride/</directory>
         </whitelist>
     </filter>
+
+    <logging>
+      <log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
+    </logging>
 </phpunit>
