--- a/lib/CodingPride/config.json
+++ b/lib/CodingPride/config.json
@@ -4,23 +4,18 @@
   "repository": "bootstrap",
   "login": "",
   "password": "",
+  "mongo":
+  {
+      "server": "mongodb://localhost:27017",
+      "options":
+      {
+          "username": "",
+          "password": "",
+          "db": "codingPride"
+      }
+  },
   "badges":
   {
-      "BraveCommit": {
-          "name": "BraveCommit",
-          "description": "You've made a commit after 16 AM!",
-          "conditions": [
-              "LateCommitCondition",
-              "PhpFileExtensionCondition"
-          ]
-      },
-      "EarlyBirdCommit": {
-          "name": "EarlyBirdCommit",
-          "description": "You've made a commit before 10 AM!",
-          "conditions": [
-              "EarlyCommitCondition"
-          ]
-      },
       "PhpContributor": {
           "name": "PhpContributor",
           "description": "You've made a commit with Javascript files.",
