--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "softonic/codingpride",
+    "name": "fiunchinho/codingpride",
     "description": "A gamification application for the fun of a development team",
 	"version": "0.0.1-dev",
     "authors": [
@@ -15,7 +15,9 @@
     "require": {
 		"php": ">=5.3.2",
         "doctrine/mongodb-odm": "dev-sf2.0",
-		"symfony/console": ">=2.0"
+		"symfony/console": ">=2.0",
+        "symfony/yaml": ">=2.0",
+        "guzzle/guzzle": "*"
     },
 	"minimum-stability": "dev",
     "autoload": {
